# tectonics

./: cubic_spline_compute.ipynb  graphing.ipynb  hello.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: formatting.yaml  linting.yaml  unit_testing.yaml
src/: generation.py
src/compute/: ShaderManager.py  __init__.py  cublic_spline.py  write_to_tex.py
src/compute/shaders/: cubic_spline.glsl  grid_to_tex.glsl
tests/: __init__.py  test_graph.py
